simplify html and add attributes that align with the properties in the task object in javascript (CamelCase too) so it is easier to leverage when looping through. make sure that all task attributes are aligned in center

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -218,6 +218,7 @@ main>.container {
     color: var(--dimmed);
     font-size: .8rem;
     display: flex;
+    align-items: center;
     gap: 0.75rem;
 }
 
@@ -265,7 +266,7 @@ main>.container {
     margin-left: -10px;
 }
 
-.attribute-container.urgent {
+.task.urgent .urgency {
     color: var(--highlight-clr);
     font-weight: bold;
 }
